<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Name: Zuhao Zhang
 *       Adrian Wong
 *       Yuxiang Liu
 *       Zhe Xu
 *       Vu Nguyen
 *       Boram Wong
 *       Srinivas Venkatraman
 *       Apurva Goenka
 *       Steven Kan
 *       Edgar Matias
 *
 * Project: EDM-Messenger
 * Date: 9/23/2019
 * Description: UCSD Fall 2019 Gary's CSE 110 Team EDM's messenger project
 */
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_gradient"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="450dp"
            android:layout_height="280dp"
            android:src="@drawable/login_image" />

        <LinearLayout
        android:id="@+id/warning"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signup_warning_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="2dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="23dp"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/grey"
            />
    </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registration"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    />

    <LinearLayout
        android:id="@+id/UserNameLayout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/signup_userNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/username"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/sign_up_username_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:hint="@string/enter_username"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/EmailLayout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/signup_emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email:   "
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sign_up_email_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/example_ucsd_edu"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PasswordLayout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signup_passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/password"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/sign_up_password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signupSignupLayout"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textColor="@color/grey"
            android:background="@drawable/custom_button"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signupBackLayout"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <LinearLayout
        android:id="@+id/signup_warning"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </LinearLayout>
    </LinearLayout>
    </ScrollView>


</RelativeLayout>